# text-analyser

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.cursor/rules/: git-template.mdc  uv-workflows.mdc
docs/: plan01-remediate.md
src/text_analyser/: __init__.py  analyser.py  file_utils.py  main.py
tests/: test_analyser.py  test_file_utils.py  test_integration.py  test_main.py
