[project]
name = "text-analyser"
version = "0.1.0"
description = "A simple CLI tool to analyse text files (words, lines, characters)"
readme = "README.md"
authors = [
    { name = "Michelle", email = "" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
text-analyser = "text_analyser:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.ruff]
# Use ruff defaults with these project-specific settings:
line-length = 89  # (Ruff default is 88)

[tool.pyright]
# Cursor Pyright explanation:
#  Ruff is a linter, not a type checker, it recommends using one: https://docs.astral.sh/ruff/faq/
#  The Cursor Pyright extension (CP) is a replacement for Microsoft Pylance (proprietary to VSCode)
#  CP uses the Basedpyright language server (BP) (a fork of Pyright used by Microsoft Pylance)
#  CP v1.0.8+ sets BP to "standard" type checking mode when "[tool.pyright]" is present
#  BP has some linting-style rules that overlap with Ruff, causing duplicate errors

# Type checking mode (CP defaults to "standard" with pyproject.toml)
typeCheckingMode = "standard"

# Disable Basedpyright rules that duplicate Ruff as you go
reportUnusedImport = false      # Ruff F401 handles it
reportUnusedVariable = false    # Ruff F841
reportDuplicateImport = false   # Ruff F811